packages/block-library/src/accordion/style.scss
.wp-block-accordion-content {
	display: grid;
	grid-template-rows: max-content 0fr;
}

.wp-block-accordion-content.is-open {
	grid-template-rows: max-content 1fr;
}

.accordion-content__heading {
	margin-block-start: 0;
	margin-block-end: 0;
}

.accordion-content__toggle {
	font-family: inherit;
	font-size: inherit;
	font-weight: inherit;
	line-height: inherit;
	letter-spacing: inherit;
	text-transform: inherit;
	text-decoration: inherit;
	word-spacing: inherit;
	background: none;
	border: none;
	color: inherit;
	padding: var(--wp--preset--spacing--20, 1em) 0;
	cursor: pointer;
	outline: none;
	display: flex;
	align-items: center;
	text-align: inherit;
	position: relative;
	width: 100%;
}

.accordion-content__toggle > span {
	width: 100%;
}

.is-layout-flow > .wp-block-accordion-panel,
.wp-block-accordion-panel {
	overflow: hidden;
	margin: 0;
}

.accordion-panel__wrapper {
	padding-bottom: var(--wp--preset--spacing--20, 1em);
}

/* No icon block style */
.is-style-no-icon .accordion-content__toggle-icon {
	background-color: unset;
}

.wp-block-accordion-header.icon-position-left .accordion-content__toggle {
	/* stylelint-disable-next-line declaration-property-value-allowed-list -- This should be refactored to not use the row-reverse value. */
	flex-direction: row-reverse;
}

/* RTL language support */
[dir="rtl"] .wp-block-accordion-header:not(.icon-position-left) .accordion-content__toggle {
	/* stylelint-disable-next-line declaration-property-value-allowed-list -- Automatically adjust icon position for RTL languages. */
	flex-direction: row-reverse;
}

[dir="rtl"] .wp-block-accordion-header.icon-position-left .accordion-content__toggle {
	flex-direction: row;
}

.accordion-content__toggle:focus-visible {
	outline: 2px solid -webkit-focus-ring-color;
	outline-offset: 2px;
}

/* Add transitions only for users who do not prefer reduced motion */
@media (prefers-reduced-motion: no-preference) {
	.wp-block-accordion-content .accordion-content__toggle-icon {
		transition: transform 0.2s ease-in-out;
	}

	.wp-block-accordion-content {
		transition: grid-template-rows 0.3s ease-out;
	}
}

.is-open {
	.accordion-content__toggle-icon.has-icon-plus {
		transform: rotate(45deg);
	}
}

